fix icon-list description - demo 2, if overflow hidden

--- a/express/blocks/icon-list/icon-list.css
+++ b/express/blocks/icon-list/icon-list.css
@@ -20,7 +20,7 @@ main .icon-list > div.icon-list-column {
 }
 
 main .icon-list .icon-list-description {
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 main .icon-list .icon-list-description p {
